--- a/src/SayMore/SayMore.csproj
+++ b/src/SayMore/SayMore.csproj
@@ -141,6 +141,7 @@
     <Compile Include="MediaUtils\Audio\AudioUtils.cs" />
     <Compile Include="MediaUtils\Audio\WaveFileReaderWrapper.cs" />
     <Compile Include="Model\ArchivingHelper.cs" />
+    <Compile Include="Model\ICMDIArchivable.cs" />
     <Compile Include="Model\IIMDIArchivable.cs" />
     <Compile Include="ResourceImageCache.cs" />
     <Compile Include="Transcription\Model\AutoSegmenter.cs" />
